# DVFS_odroidn2

./: .gitignore  CMakeLists.txt  README.md  console.hpp  governor.hpp  index-1.html  object_detection.cpp  restore.sh  run.sh  types.cpp
resource/: ._CMakeLists.txt  ._run.sh  CMakeLists.txt  Makefile  console.hpp  governor.hpp  object_detection.cpp  run.sh  run.sh~  tiny_yolo.cfg  types.cpp  types.h
